--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/style.css">
   <title>Frontend Mentor | QR code component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -21,15 +21,15 @@
 
 <body>
   <div class="card">
-    <div class="qr-code">
+    <div class="card__code">
       <img src="images/image-qr-code.png" alt="qr">
     </div>
 
-    <div class="main">
+    <div class="card__title">
       <P><b>Improve your front-end skills by building projects</b></P>
     </div>
     
-    <div class="paragraph">
+    <div class="card__desc">
     Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
     </div>
   </div>
@@ -37,7 +37,7 @@
 
   <footer>
   <div class="attribution">
-    Challenge by <a     href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">FayeKs</a>.
   </div>
   </footer>
